fixed gradle dependency example

--- a/README.adoc
+++ b/README.adoc
@@ -140,10 +140,10 @@ repositories {
 }
 
 dependencies {
-    compile 'ch.petikoch.libs.jtwfg:jtwfg:1.0.0' // or whatever explicit version
+    compile 'ch.petikoch.libs:jtwfg:1.0.0' // or whatever explicit version
 
     // or "latest", for the braves:
-    //compile 'ch.petikoch.libs.jtwfg:jtwfg:+'
+    //compile 'ch.petikoch.libs:jtwfg:+'
 }
 ----
 
