--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ image:http://img.shields.io/badge/download-latest-bb00bb.svg[link="https://bintr
 *jtwfg* is a small, standalone java library.
 
 The typical use case for someone is having some kind of own "execution engine" implementation
-(local, distributed, grid...) with some kind of tasks in it, with optionally dependencies between the tasks.
+(local, distributed, grid...) with some kind of tasks in it, with optional dependencies between the tasks.
 Someone wants to be able to *easily detect deadlocks* in his/her engine.
 
 Of course, jtwfg also works for any other kind of "find circular dependencies problems", not only deadlocks.
