--- a/README.adoc
+++ b/README.adoc
@@ -145,9 +145,9 @@ repositories {
 }
 
 dependencies {
-    compile 'ch.petikoch.libs:jtwfg:1.0.4' // or whatever explicit version
+    compile 'ch.petikoch.libs:jtwfg:x.y.z'
 
-    // or "latest", for the braves:
+    // or "latest" release, for the braves:
     //compile 'ch.petikoch.libs:jtwfg:+'
 }
 ----
@@ -161,8 +161,8 @@ Add jtwfg as dependency to your pom.xml:
         <dependency>
             <groupId>ch.petikoch.libs</groupId>
             <artifactId>jtwfg</artifactId>
-            <version>1.0.4</version> <!-- or whatever version -->
-            <!-- or latest release (not snapshot), for the braves
+            <version>x.y.z</version>
+            <!-- or latest release, for the braves
             <version>RELEASE</version>
             -->
         </dependency>
