--- a/README.adoc
+++ b/README.adoc
@@ -4,12 +4,10 @@ Peti Koch
 :project-name: jtwfg
 :github-branch: master
 :github-user: Petikoch
-:bintray-user: petikoch
 
 image:http://img.shields.io/badge/license-ASF2-blue.svg["Apache License 2", link="http://www.apache.org/licenses/LICENSE-2.0.txt"]
-image:http://img.shields.io/badge/download-latest-bb00bb.svg[link="https://bintray.com/{bintray-user}/maven/{project-name}/_latestVersion"]
+image:http://img.shields.io/badge/download-latest-bb00bb.svg[link="https://search.maven.org/search?q=g:ch.petikoch.libs%20AND%20a:{project-name}"]
 image:https://travis-ci.org/{github-user}/{project-name}.svg?branch={github-branch}["Build Status", link="https://travis-ci.org/{github-user}/{project-name}"]
-image:http://img.shields.io/coveralls/{github-user}/{project-name}.svg["Coverage Status", link="https://coveralls.io/r/{github-user}/{project-name}"]
 
 == Introduction
 
@@ -104,7 +102,7 @@ if(analyzisResult.hasDeadlock()){
 === Usage scenario 2: "Update the jtwfg model" as you update your domain model objects and check for deadlocks on the fly
 
 Probably you want to keep the jtwfg model objects "in sync" with your domain model objects and check for deadlocks on the fly
-as soon as you update your model objects. Probably you use various threads to update your domain model objects and the jtwfg model objects.
+as soon as you update your model objects.Probably you use various threads to update your domain model objects and the jtwfg model objects.
 
 That's fine.
 
@@ -121,14 +119,14 @@ If you would like to use jtwfg single-threaded and have performance issues, let 
 === Limitations of jtwfg
 
 * At the moment jtwfg supports only simple, synchronous "waits for" dependencies.
-* The algorithms are not yet tuned and work more or less in a "brute force" manner. Please create a github issue if you have zillions of tasks and run into performance / memory issues.
+* The algorithms are not yet tuned and work more or less in a "brute force" manner.
+Please create a github issue if you have zillions of tasks and run into performance / memory issues.
 
 == Requirements
 
 To use this library you need
 
-* Java 7 or later
-* no other libs
+* Java 8 or later
 
 == Installation
 
@@ -141,7 +139,7 @@ Add the following dependency in your gradle build file:
 [source,groovy]
 ----
 repositories {
-   jcenter() // Bintray's JCenter repository
+   mavenCentral()
 }
 
 dependencies {
@@ -168,13 +166,6 @@ Add jtwfg as dependency to your pom.xml:
         </dependency>
 ----
 
-Be sure to have Bintray's JCenter repository in your maven settings.xml. If not, see "Set me up!" on the
-https://bintray.com/bintray/jcenter page for instructions to set it up.
-
-==== Just the jar
-
-image:http://img.shields.io/badge/download-latest-bb00bb.svg[link="https://bintray.com/{bintray-user}/maven/{project-name}/_latestVersion"] The jar of the latest version
-
 == Release notes
 
 See https://github.com/Petikoch/jtwfg/releases.
@@ -185,8 +176,7 @@ Please use GitHub issues and pull requests for support.
 
 == How to build the project
 
-To run a build of the jtwfg project on your machine, clone the git repo to your local machine and start the gradle based build using
-gradle's http://gradleware.com/registered-access?content=screencasts%2Fthe-gradle-wrapper%2F[gradlewrapper] from the shell/command line:
+To run a build of the jtwfg project on your machine, clone the git repo to your local machine and start the gradle based build using the gradle wrapper from the shell/command line:
 
 [source]
 ----
